@@ -8,11 +8,11 @@ namespace Pds {
 
   namespace Acqiris {
 
-    class VertConfigV1 {
+    class VertV1 {
     public:
-      VertConfigV1();
-      VertConfigV1(double fullScale, double offset,
-                   uint32_t coupling, uint32_t bandwidth);
+      VertV1();
+      VertV1(double fullScale, double offset,
+             uint32_t coupling, uint32_t bandwidth);
       double   fullScale() const;
       double   offset()    const;
       uint32_t coupling()  const;
@@ -24,13 +24,13 @@ namespace Pds {
       uint32_t _bandwidth;
     };
 
-    class HorizConfigV1 {
+    class HorizV1 {
     public:
-      HorizConfigV1();
-      HorizConfigV1(double   sampInterval,
-                    double   delayTime,
-                    uint32_t nbrSamples,
-                    uint32_t nbrSegments);
+      HorizV1();
+      HorizV1(double   sampInterval,
+              double   delayTime,
+              uint32_t nbrSamples,
+              uint32_t nbrSegments);
       double   sampInterval()     const;
       double   delayTime()        const;
       uint32_t nbrSamples()       const;
@@ -42,13 +42,13 @@ namespace Pds {
       uint32_t _nbrSegments;
     };
 
-    class TrigConfigV1 {
+    class TrigV1 {
     public:
-      TrigConfigV1();
-      TrigConfigV1(uint32_t trigCoupling,
-                   uint32_t trigInput,
-                   uint32_t trigSlope,
-                   double   trigLevel);
+      TrigV1();
+      TrigV1(uint32_t trigCoupling,
+             uint32_t trigInput,
+             uint32_t trigSlope,
+             double   trigLevel);
       uint32_t trigCoupling()     const;
       uint32_t trigInput()        const;
       uint32_t trigSlope()        const;
@@ -67,27 +67,27 @@ namespace Pds {
       ConfigV1 (uint32_t nbrConvertersPerChannel,
                 uint32_t channelMask,
                 uint32_t nbrBanks,
-                const TrigConfigV1& trigConfig,
-                const HorizConfigV1& horizConfig,
-                const VertConfigV1* chanConfig);
+                const TrigV1& trig,
+                const HorizV1& horiz,
+                const VertV1* chanConfig);
       uint32_t nbrConvertersPerChannel() const;
       uint32_t channelMask()      const;
       uint32_t nbrChannels()      const;
       uint32_t nbrBanks()         const;
-      HorizConfigV1& horizConfig();
-      TrigConfigV1& trigConfig();
-      VertConfigV1& vertConfig(uint32_t channel);
-      const HorizConfigV1& horizConfig() const;
-      const TrigConfigV1& trigConfig() const;
-      const VertConfigV1& vertConfig(uint32_t channel) const;
+      HorizV1& horiz();
+      TrigV1& trig();
+      VertV1& vert(uint32_t channel);
+      const HorizV1& horiz() const;
+      const TrigV1& trig() const;
+      const VertV1& vert(uint32_t channel) const;
       static Pds::TypeId typeId();
     private:
       uint32_t _nbrConvertersPerChannel;
       uint32_t _channelMask;
       uint32_t _nbrBanks;
-      TrigConfigV1 _trigConfig;
-      HorizConfigV1 _horizConfig;
-      VertConfigV1 _vertConfig[MaxChan];
+      TrigV1   _trig;
+      HorizV1  _horiz;
+      VertV1   _vert[MaxChan];
     };
 
   }
