@@ -1,0 +1,54 @@
+
+#include "pdsdata/acqiris/DataDescV1.hh"
+
+using namespace Pds;
+using namespace Acqiris;
+
+static const unsigned Version=1;
+
+Pds::TypeId DataDescV1::typeId() {
+  return Pds::TypeId(Pds::TypeId::Id_AcqConfig,Version);
+}
+
+uint64_t TimestampV1::value() const {
+  uint64_t ts = _timeStampHi;
+  ts = (ts<<32) + (unsigned long)(_timeStampLo);
+  return ts;
+}
+
+uint64_t TimestampV1::operator-(const TimestampV1& ts) const {
+  return value()-ts.value();
+}
+
+uint32_t DataDescV1::nbrSamplesInSeg() const {
+  return _returnedSamplesPerSeg;
+}
+
+uint32_t DataDescV1::nbrSegments() const {
+  return _returnedSegments;
+}
+
+TimestampV1& DataDescV1::timestamp(uint32_t seg) {
+  return _timestamp()[seg];
+}
+
+uint16_t* DataDescV1::waveform(const HorizV1& hconfig) {
+  return (uint16_t*)(&(_timestamp()[hconfig.nbrSegments()]));
+}
+
+uint32_t DataDescV1::timestampSize(const HorizV1& hconfig) {
+  return hconfig.nbrSegments()*sizeof(TimestampV1);}
+
+uint32_t DataDescV1::waveformSize(const HorizV1& hconfig) {
+  return hconfig.nbrSamples()*hconfig.nbrSegments()*sizeof(short)+_extra;}
+
+uint32_t DataDescV1::totalSize(const HorizV1& hconfig) {
+  return sizeof(DataDescV1)+DataDescV1::timestampSize(hconfig)+DataDescV1::waveformSize(hconfig);}
+
+DataDescV1* DataDescV1::nextChannel(const HorizV1& hconfig) {
+  return (DataDescV1*)((char*)(waveform(hconfig))+DataDescV1::waveformSize(hconfig));
+}
+
+TimestampV1* DataDescV1::_timestamp() {
+  return (TimestampV1*)(this+1);
+}
